topbar section compeet

--- a/index.html
+++ b/index.html
@@ -4,9 +4,32 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="styles/styel.css">
     <title>SNEAKER</title>
 </head>
 <body>
+    <header>
+        <div class="top-var">
+            <div class="con">
+                <i class=" fa fa-solid fa-envelope"></i>
+                <p class="em">youremail@mail.com</p>
+                <i class=" fa fa-solid fa-phone"></i>
+                <p>+88 01700671150</p>
+            </div>
+            <div class="social-icon">
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-twitter"></a>
+                <a href="#" class="fa fa-google"></a>
+                <a href="#" class="fa fa-linkedin"></a>
+                <a href="#" class="fa fa-youtube"></a>
+                <a href="#" class="fa fa-instagram"></a>
+            </div>
+        </div>
+        <!-- Top bar section end here  -->
+        <!-- navbar section start here  -->
+        
+    </header>
     
 </body>
 </html>
