navbar section Done

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <div class="top-var">
+        <div class="top-var tv">
             <div class="con">
                 <i class=" fa fa-solid fa-envelope"></i>
                 <p class="em">youremail@mail.com</p>
@@ -28,8 +28,35 @@
         </div>
         <!-- Top bar section end here  -->
         <!-- navbar section start here  -->
-        
+        <nav>
+            <div class="logo">
+                <h2 class="lg">SNEAKER</h2>
+            </div>
+            <div class="menu">
+                <ul class="menus">
+                    <li>HOME</li>
+                    <li>ABOUT</li>
+                    <li>SHOP</li>
+                    <li>CONTACT</li>
+                </ul>
+            </div>
+            <div class="cart">
+                <i class=" fal fa-solid fa-envelope"></i>
+                <i class=" fal fa-solid fa-envelope"></i>
+                <i class=" fal fa-solid fa-envelope"></i>
+            </div>
+        </nav>
     </header>
+    <!-- header section end here  -->
+    <!-- hero section start here  -->
+    <main>
+        <div class="hero-container">
+            <div class="bnr-text">
+                <h1> A treat for sneaker lovers </h1>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod, velit. Vel, vitae iste! Odit, perspiciatis voluptatibus fuga cum laboriosam molestiae.</p>
+            </div>
+        </div>
+    </main>
     
 </body>
 </html>
