on going prosess on feature product

--- a/index.html
+++ b/index.html
@@ -52,10 +52,36 @@
     <main>
         <div class="hero-container">
             <div class="bnr-text">
-                <h1> A treat for sneaker lovers </h1>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod, velit. Vel, vitae iste! Odit, perspiciatis voluptatibus fuga cum laboriosam molestiae.</p>
+                <h1 class="btxt"> A treat for <span class="btxt txt-bg-color">sneaker</span> lovers. </h1>
+                <h3 class="subtitle">Tiny and Perfect eCommerce Template</h3>
+                <p class="info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quod, velit. Vel, vitae iste! Odit, perspiciatis voluptatibus fuga cum laboriosam molestiae.</p>
+            </div>
+            <div class="hero-img">
+                <img src="image/banner_img.jpg" class="hrimage" alt="">
             </div>
         </div>
+
+        <!-- hero-section end here  -->
+
+        <!-- feture product section start here  -->
+
+        <section>
+            <div class="feature">
+                <h1 class="sec-title"> Feature Products </h1>
+                <p class="info sec-sub-title">Reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur.<br> sint occaecat cupidatat non proident. <p>
+                    <div class="product-box">
+                        <div class="box box1">
+                            <div class="product-img"></div>
+                            <div class="rating"></div>
+                            <h3> Sneaker One </h3>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <button> buy Now </button>
+                        </div>
+                        <div class="box box2"></div>
+                        <div class="box box3"></div>
+                    </div>
+            </div>
+        </section>
     </main>
     
 </body>
